--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -147,9 +147,9 @@
     "react-json-tree": "^0.11.2",
     "react-jsonschema-form": "^1.2.0",
     "react-loadable": "^5.5.0",
-    "react-loader-spinner": "4.0.0",
+    "react-loader-spinner": "^4.0.0",
     "react-markdown": "^4.3.1",
-    "react-promise-tracker": "2.1.0",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-resize-detector": "^6.0.1-rc.1",
     "react-router-dom": "^5.1.2",
